// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config Parsing should load local and override configurations 1`] = `
{
  "configDirectoryPath": "/test/gutenberg",
  "detectedLocalConfig": true,
  "dockerComposeConfigPath": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/docker-compose.yml",
  "env": {
    "development": {
      "config": {
        "SCRIPT_DEBUG": true,
        "WP_DEBUG": true,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:999",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:999",
        "WP_TESTS_DOMAIN": "localhost:999",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/WordPress",
        "path": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/WordPress",
        "ref": "trunk",
        "testsPath": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "phpVersion": null,
      "pluginSources": [],
      "port": 999,
      "themeSources": [],
    },
    "tests": {
      "config": {
        "SCRIPT_DEBUG": false,
        "WP_DEBUG": false,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:456",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:456",
        "WP_TESTS_DOMAIN": "localhost:456",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/WordPress",
        "path": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/WordPress",
        "ref": "trunk",
        "testsPath": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "phpVersion": null,
      "pluginSources": [],
      "port": 456,
      "themeSources": [],
    },
  },
  "name": "gutenberg",
  "workDirectoryPath": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338",
}
`;

exports[`Config Parsing should load local configuration 1`] = `
{
  "configDirectoryPath": "/Users/obliviousharmony/Code/WordPress/gutenberg",
  "detectedLocalConfig": true,
  "dockerComposeConfigPath": "/cache/f406b227b400575d350730477365a884/docker-compose.yml",
  "env": {
    "development": {
      "config": {
        "SCRIPT_DEBUG": true,
        "WP_DEBUG": true,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:8888",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:8888",
        "WP_TESTS_DOMAIN": "localhost:8888",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/f406b227b400575d350730477365a884/WordPress",
        "path": "/cache/f406b227b400575d350730477365a884/WordPress",
        "ref": "100.0.0",
        "testsPath": "/cache/f406b227b400575d350730477365a884/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "phpVersion": null,
      "pluginSources": [],
      "port": 8888,
      "themeSources": [],
    },
    "tests": {
      "config": {
        "SCRIPT_DEBUG": false,
        "WP_DEBUG": false,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:8889",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:8889",
        "WP_TESTS_DOMAIN": "localhost:8889",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/f406b227b400575d350730477365a884/WordPress",
        "path": "/cache/f406b227b400575d350730477365a884/WordPress",
        "ref": "100.0.0",
        "testsPath": "/cache/f406b227b400575d350730477365a884/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "phpVersion": null,
      "pluginSources": [],
      "port": 8889,
      "themeSources": [],
    },
  },
  "name": "gutenberg",
  "workDirectoryPath": "/cache/f406b227b400575d350730477365a884",
}
`;

exports[`Config Parsing should use default configuration 1`] = `
{
  "configDirectoryPath": "/test/gutenberg",
  "detectedLocalConfig": true,
  "dockerComposeConfigPath": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/docker-compose.yml",
  "env": {
    "development": {
      "config": {
        "SCRIPT_DEBUG": true,
        "WP_DEBUG": true,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:8888",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:8888",
        "WP_TESTS_DOMAIN": "localhost:8888",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/WordPress",
        "path": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/WordPress",
        "ref": "100.0.0",
        "testsPath": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "phpVersion": null,
      "pluginSources": [],
      "port": 8888,
      "themeSources": [],
    },
    "tests": {
      "config": {
        "SCRIPT_DEBUG": false,
        "WP_DEBUG": false,
        "WP_ENVIRONMENT_TYPE": "local",
        "WP_HOME": "http://localhost:8889",
        "WP_PHP_BINARY": "php",
        "WP_SITEURL": "http://localhost:8889",
        "WP_TESTS_DOMAIN": "localhost:8889",
        "WP_TESTS_EMAIL": "admin@example.org",
        "WP_TESTS_TITLE": "Test Blog",
      },
      "coreSource": {
        "basename": "WordPress",
        "clonePath": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/WordPress",
        "path": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/WordPress",
        "ref": "100.0.0",
        "testsPath": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338/tests-WordPress",
        "type": "git",
        "url": "https://github.com/WordPress/WordPress.git",
      },
      "mappings": {},
      "phpVersion": null,
      "pluginSources": [],
      "port": 8889,
      "themeSources": [],
    },
  },
  "name": "gutenberg",
  "workDirectoryPath": "/cache/5fea4c5689ef6cc4a4e6eaaa39323338",
}
`;
